--- a/src/app/components/classe/profil-eleve/profil-eleve.component.html
+++ b/src/app/components/classe/profil-eleve/profil-eleve.component.html
@@ -1,1 +1,106 @@
-<p>profil-eleve works!</p>
+<div class="procon">
+
+    <div class="sidebar">
+        <img src="assets/enf.jpg" class="card-img-top">
+        <div class="card-body" *ngFor="let e of eleve">
+            <h5 class="card-title"> 
+                {{e.nom}}  {{e.prenom}}
+            </h5>
+            <p class="card-text"> {{e.age}}</p>
+            <button class="edit" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
+
+        </div>
+    </div>
+
+
+    <div class="info">
+        <div class="data">
+            <h5 class="card-title">info</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+        </div>
+
+        <div class="progr">
+           
+            <div class="pog">
+
+               <div>
+                   <a> Active</a>
+                <div class="progress" >
+              
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                     </div>
+               </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+            </div>
+          
+        </div>
+
+        <div class="slider">
+            
+           <div class="i">
+            
+                <input  class="sl" checked type="radio" name="s "style="background-image: url('assets/enf.jpg');">
+                <input   class="sl" type="radio" name="s" style="background-image: url('assets/enf.jpg');">
+                <input    class="sl" type="radio" name="s" style="background-image: url('assets/enf.jpg');">
+                <input  class="sl"  type="radio" name="s" style="background-image: url('assets/enf.jpg');">
+                <input   class="sl"  type="radio" name="s" style="background-image: url('assets/enf.jpg');">
+            
+           </div>
+            
+         
+        </div>
+
+
+    </div>
+
+    <div class="progresss">
+        <div class="card-body">
+            <h5 class="card-title">progress</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.
+                Some quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                contentSome quick example text to build on the card title and make up the bulk of the card's
+                content</p>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
