--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
         </li>
       
            <li><a [routerLink]="['/classe']">Classe</a></li> 
-            <li><a [routerLink]="['/Activite']">Activités</a></li> 
+            <li><a [routerLink]="['/activite/:id']">Activités</a></li> 
               <li><a [routerLink]="['/paiement']">Paiement</a></li> 
                 <li><a [routerLink]="['/stock']">Stock</a></li> 
                 <li><a class="nav-link" (click)="deconnecter()" ><p class="text-right"><i class="fa fa-sign-out"></i>Log Out </p></a> 
