--- a/src/app/components/employe/employe.component.html
+++ b/src/app/components/employe/employe.component.html
@@ -1,1 +1,24 @@
-<p>employe works!</p>
+
+  
+  
+    <div class="row">
+    <div class="col-sm-4" *ngFor="let e of employe">
+      <div class="card bg-light mb-3" >
+        
+        <div class="card-body">
+          <a class="card-title" [routerLink]="['/listemp/:id']">{{e.categorie}}</a>
+      
+        </div>
+      </div>
+      <!-- row 2-->
+  
+    </div>
+  </div>
+  
+  
+  
+  
+
+  
+  
+  
