--- a/src/app/components/classe/classe.component.html
+++ b/src/app/components/classe/classe.component.html
@@ -1,33 +1,58 @@
-<div class="container-fluid cl">
-  
- 
- 
+
+ <div class="area" >
+  <ul class="circles">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+  </ul>
+</div >
+
+
+
+
+
+<div class="cl">
+
   <input type="checkbox" id="toggle">
-<label for="toggle" style="margin-top: 10px; margin-left: 50px;">Add</label>
+<label class="add" for="toggle" style="margin-left: 50px; width: 3%; height: 5%;">Add</label>
 
 <dialog >
-  <p>
-    
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nihil dolore similique quis qui ad blanditiis ex eum! Enim maiores ipsam fugiat officiis earum distinctio natus reprehenderit aliquam est iusto!
-  </p>
+  <form #addForms="ngForm" (ngSubmit)="onAddCLasse(addForms)">
+    <div class="form-group row">
+        <label for="nom"   class="col-sm-2 col-form-label">nom</label>
+        <div class="col-sm-10">
+          <input type="text" ngModel name="nom" class="form-control" id="nom" placeholder="nom" required>
+        </div>
+    </div>
+    <button [disabled]="addForms.invalid" type="submit" class="btn btn-primary">Save changes</button>
+</form>
     
   
-  <label for="toggle">close overlay</label>
+  <label for="toggle" >close overlay</label>
 </dialog>
 
-  <div class="row">
-  <div class="col-sm-4" *ngFor="let c of classe">
-    <div class="card bg-light mb-3" style="max-width: 20rem;">
-      
-      <div class="card-body">
-        <a class="card-title" [routerLink]="['/liste/:id']">{{c.name}}</a>
-        <p class="card-text">{{c.nombre}}</p>
+  
+    <div class="row">
+      <div class="col-sm-3" *ngFor="let c of classee">
+        <div class="classe" >
+        <div class="card bg-light mb-3" >
+          
+          <div class="card-body">
+            <a class="card-title" [routerLink]="['/liste/:id']" (click)="ongetEleveByClasse(c.id)">{{c.nom}}</a>
+          </div>
+        </div>
+        <!-- row 2-->
+  
       </div>
     </div>
-    <!-- row 2-->
-
   </div>
-</div>
 
 
 
