--- a/src/app/components/classe/classe.component.scss
+++ b/src/app/components/classe/classe.component.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Magra&family=Mukta:wght@200&family=Scada&display=swap');
 #toggle{
   visibility: hidden;
   opacity: 0;
@@ -8,12 +9,24 @@
 #toggle:checked ~ dialog {
   display: block;
 }
+.popup{
+margin-bottom: 0px;
+}
 
+.add{ background: skyblue;
+  color: white;
+  padding: .5em 1em;
+  border-radius: 4px;
+  position: fixed;
+  top: 8%;
+
+}
 label{
   background: skyblue;
   color: white;
   padding: .5em 1em;
   border-radius: 4px;
+
 }
 @keyframes appear {
   0%{
@@ -40,40 +53,206 @@ dialog{
         transition: .7s;
         
       }
-      .my-container{
+      .cl{
         display:grid;
-        min-height: 100vh;
-        width: 100vw;
+     
         gap: 8%;
-
-        overflow: hidden;
+position: absolute;
+top: 15%;
+    
 
       }
       
-      .row{
-        margin-top:2%;
-       
-      }
+      
+     
       .card{
-        margin-left: 10%;
-        height: 180px;
+       margin-top: 40px;
+       width: 35vh;
+       border-radius: 60%;
+       box-shadow:  0 5px 15px rgba(138, 135, 135, 0.226);
+margin-left: 10px;
      
 
       }
      .card-title{
-       padding-top: 15%;
      display: block;
        text-align: center;
        text-decoration: none;
        color: black;
+       font-size: 24px;
+       font-family: 'Scada', sans-serif;
      }
      .card-text{
        text-align: center;
      }
+     .col{
+       top:0px;
+     
+     }
 
+     
      @media screen and (max-width: 1145px) and (min-width: 953px) {
 
       .row{
         width: 100%;
       }
      }
+
+
+
+
+     .area{
+      background: #2600ff17;  
+      background: -webkit-linear-gradient(to left, #040fe6 #040fe6);  
+      width: 100%;
+      height:92.8vh;
+      
+     
+  }
+  
+  .circles{
+      position: absolute;
+      top: 10%;
+      left: 0;
+      width: 100%;
+      height: 90%;
+      overflow: hidden;
+  }
+  
+  .circles li{
+      position: absolute;
+      display: block;
+      list-style: none;
+      width: 20px;
+      height: 20px;
+      background: #270ace;
+      animation: animate 25s linear infinite;
+      bottom: -150px;
+      
+  }
+  
+  .circles li:nth-child(1){
+      left: 25%;
+      width: 80px;
+      height: 80px;
+      animation-delay: 0s;
+  }
+  
+  
+  .circles li:nth-child(2){
+      left: 10%;
+      width: 20px;
+      height: 20px;
+      animation-delay: 2s;
+      animation-duration: 12s;
+  }
+  
+  .circles li:nth-child(3){
+      left: 70%;
+      width: 20px;
+      height: 20px;
+      animation-delay: 4s;
+  }
+  
+  .circles li:nth-child(4){
+      left: 40%;
+      width: 60px;
+      height: 60px;
+      animation-delay: 0s;
+      animation-duration: 18s;
+  }
+  
+  .circles li:nth-child(5){
+      left: 65%;
+      width: 20px;
+      height: 20px;
+      animation-delay: 0s;
+  }
+  
+  .circles li:nth-child(6){
+      left: 75%;
+      width: 110px;
+      height: 110px;
+      animation-delay: 3s;
+  }
+  
+  .circles li:nth-child(7){
+      left: 35%;
+      width: 150px;
+      height: 150px;
+      animation-delay: 7s;
+  }
+  
+  .circles li:nth-child(8){
+      left: 50%;
+      width: 25px;
+      height: 25px;
+      animation-delay: 15s;
+      animation-duration: 45s;
+  }
+  
+  .circles li:nth-child(9){
+      left: 20%;
+      width: 15px;
+      height: 15px;
+      animation-delay: 2s;
+      animation-duration: 35s;
+  }
+  
+  .circles li:nth-child(10){
+      left: 85%;
+      width: 150px;
+      height: 150px;
+      animation-delay: 0s;
+      animation-duration: 11s;
+  }
+  
+  
+  
+  @keyframes animate {
+  
+      0%{
+          transform: translateY(0) rotate(0deg);
+          opacity: 1;
+          border-radius: 0;
+      }
+  
+      100%{
+          transform: translateY(-1000px) rotate(720deg);
+          opacity: 0;
+          border-radius: 50%;
+      }
+  
+  }
+  @media all and(max-width: 574px) {
+    .area{
+      background: #2600ff17;  
+      background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
+      width: 100%;
+      min-height:300vh;
+      
+     
+  }
+  .cl{
+    display:grid;
+    min-height: 300vh;
+    width: 100vw;
+    gap: 8%;
+position: absolute;
+top: 0vh;
+   
+    
+
+  
+  }
+
+  .circles{
+
+}
+
+.circles li{
+  z-index: 0;
+  
+}
+    
+  }
