--- a/src/app/components/classe/liste-eleve/liste-eleve.component.scss
+++ b/src/app/components/classe/liste-eleve/liste-eleve.component.scss
@@ -1,3 +1,38 @@
+#toggle{
+    visibility: hidden;
+    opacity: 0;
+    position: relative;
+    z-index: 99;
+  }
+  
+  #toggle:checked ~ dialog {
+    display: block;
+  }
+
+  label{ background: skyblue;
+    border-radius: 4px;}
+  .add{
+    background: skyblue;
+    color: white;
+
+    border-radius: 4px;
+  }
+  @keyframes appear {
+    0%{
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+  }
+  
+  dialog{
+    animation: appear 350ms ease-in 1;
+    max-width: 500px;
+    z-index: 99;
+  }
+
+
+
+
 .table{
 
 	width: 30%;
@@ -19,11 +54,19 @@ a{
     color: black;
 
 }
+.danger{
+    background-color: blue;
+    color: white;
+ float:right;
+ font-size: 70%;
+ border: blue;
+ border-radius: 5px;
+}
 .con{
 width: 100%;
 display: grid;
 margin-left: 10px;
-
+background-color: #2600ff17;
 }
 
 .listc{
@@ -40,3 +83,4 @@ margin-left: 10px;
 h1{
     color: blue;
 }
+
